--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+@font-face {
+  font-family: 'RobotoCondensed';
+  src: url('assets/fonts/RobotoCondensed/RobotoCondensed-Regular.ttf');
+}
+* {
+  font-family: 'RobotoCondensed';
+}
