--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="example-container">
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav #sidenav [mode]="'over'">
     <p>
       asdasd
@@ -17,13 +17,34 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <mat-form-field>
-      <input matInput placeholder="First name">
-    </mat-form-field>
-
-    <mat-form-field>
-      <input matInput placeholder="Age">
-    </mat-form-field>
+    <mat-grid-list cols="12">
+      <mat-grid-tile colspan="5">
+        <mat-form-field>
+          <input matInput placeholder="Search Message" class="search" name="search" (keyup)="searchKeyup()" [(ngModel)]="search">
+          <mat-icon matSuffix>search</mat-icon>
+        </mat-form-field>
+        <mat-slide-toggle [color]="'primary'" (change)="changeStrictSearch()" [checked]="strictSearch">Strict Search</mat-slide-toggle>
+      </mat-grid-tile>
+      <mat-grid-tile colspan="3">
+        <mat-form-field>
+          <mat-select placeholder="Level" (change)="changeLevel()" [(value)]="level">
+            <mat-option *ngFor="let level of levels" [value]="level.value">
+              {{level.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile colspan=3>
+        <mat-form-field>
+          <input matInput [matDatepicker]="picker" placeholder="Choose a date" name="date" (dateChange)="changeDate()">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile colspan=1>
+        <button mat-raised-button (click)="refresh()">Refresh</button>
+      </mat-grid-tile>
+    </mat-grid-list>
   </mat-expansion-panel>
 </mat-accordion>
 
