--- a/src/app/core/components/home/home.component.css
+++ b/src/app/core/components/home/home.component.css
@@ -65,7 +65,6 @@ div.log-list div {
   background: rgba(0, 0, 0, 0.3);
   height: 1000px;
 }
-
 div.sidenav {
   width: 400px;
   padding: 10px;
@@ -75,4 +74,28 @@ div.sidenav div.change-view {
 }
 div.sidenav button.logout {
   float: right;
+}
+div.info {
+  margin-top: 30px;
+}
+div.info table {
+  border-collapse: collapse;
+  width: 100%;
+}
+div.info table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+div.info table tr:hover {
+  background-color: #ddd;
+}
+div.info tr td:first-child {
+  text-align: right;
+  width: 80px;
+}
+div.info tr td:last-child {
+  font-weight: bold;
+}
+div.info tr td {
+  padding: 8px;
+  border: 1px solid #ddd;
 }
