--- a/src/app/core/components/object/object.component.css
+++ b/src/app/core/components/object/object.component.css
@@ -1,18 +1,22 @@
-div.object {
-    font-family: RobotoMono !important;
+div.object * {
+  font-family: RobotoMono !important;
 }
 div.props {
-    margin-bottom: 1px;
-    word-break: break-all;
+  margin-bottom: 1px;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 span.badge {
-    background: rgba(0, 0, 0, 0.4);
-    border-radius: 5px;
-    padding: 0px;
-    padding-left: 3px;
-    padding-right: 3px;
-    color: white;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+  padding: 0px;
+  padding-left: 3px;
+  padding-right: 3px;
+  color: white;
+  margin-right: -10px;
 }
 div.value-div {
-    display: inline-flex;
+  display: inline-flex;
+  word-break: break-all;
+  word-wrap: break-word;
 }
