--- a/src/app/core/components/table-view/table-view.component.html
+++ b/src/app/core/components/table-view/table-view.component.html
@@ -1,3 +1,33 @@
-<p>
-  table-view works!
-</p>
+<div class="table-container mat-elevation-z8">
+  <mat-table #table [dataSource]="dataSource">
+    <ng-container matColumnDef="Level">
+      <mat-header-cell *matHeaderCellDef> Level </mat-header-cell>
+      <mat-cell *matCellDef="let log"> {{log.Level}} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="Date">
+      <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+      <mat-cell *matCellDef="let log"> {{log.Date | date:"HH:mm dd/MM/yyyy"}} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="Logger">
+      <mat-header-cell *matHeaderCellDef> Logger </mat-header-cell>
+      <mat-cell *matCellDef="let log"> {{log.Logger}} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="Message">
+      <mat-header-cell *matHeaderCellDef> Message </mat-header-cell>
+      <mat-cell *matCellDef="let log"> {{log.Message}} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="JSON">
+      <mat-header-cell *matHeaderCellDef> JSON </mat-header-cell>
+      <mat-cell *matCellDef="let log">
+        <app-object [object]="log.JsonObject"></app-object>
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="Exception">
+      <mat-header-cell *matHeaderCellDef> Exception </mat-header-cell>
+      <mat-cell *matCellDef="let log"> {{log.Exception}} </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" class="{{row.Level | lowercase}} mat-row ng-star-inserted"></mat-row>
+  </mat-table>
+</div>
