--- a/src/styles.css
+++ b/src/styles.css
@@ -2,36 +2,26 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 @font-face {
-  font-family: 'RobotoCondensed';
-  src: url('assets/fonts/RobotoCondensed/RobotoCondensed-Regular.ttf');
+  font-family: RobotoCondensed;
+  src: url(assets/fonts/RobotoCondensed/RobotoCondensed-Regular.ttf);
+}
+@font-face {
+  font-family: RobotoMono;
+  src: url(assets/fonts/RobotoMono/RobotoMono-Regular.ttf);
 }
 * {
-  font-family: 'RobotoCondensed';
+  font-family: RobotoCondensed;
 }
 
-:root {
-	--scroll-bar-size: 10px;
-	--scroll-bar-thumb-background-color: rgba(0, 0, 0, 0.2);
-	--scroll-bar-thumb-background-color-active: rgba(0, 0, 0, 0.5);
-}
 ::-webkit-scrollbar {
-	width: var(--scroll-bar-size);
-	height: var(--scroll-bar-size);
-	background: transparent;
-	cursor: pointer;
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
 }
 ::-webkit-scrollbar-thumb {
-	background-color: var(--scroll-bar-thumb-background-color);
-	border-color: transparent;
-	border-style: solid;
-	background-clip: padding-box;
+    background: #888; 
 }
-::-webkit-scrollbar-thumb:active {
-	background-color: var(--scroll-bar-thumb-background-color-active);
-}
-::-webkit-scrollbar-thumb:hover,
-::-webkit-scrollbar-thumb:active {
-	border-width: 1px;
-	background-color: var(--scroll-bar-thumb-background-color-active);
-	cursor: pointer;
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
