--- a/src/app/core/components/table-view/table-view.component.html
+++ b/src/app/core/components/table-view/table-view.component.html
@@ -1,30 +1,31 @@
-<div class="table-container mat-elevation-z8">
+<div class="table-container mat-elevation-z8" @list>
+  <div @item></div>
   <mat-table #table [dataSource]="dataSource">
     <ng-container matColumnDef="Level">
       <mat-header-cell *matHeaderCellDef> Level </mat-header-cell>
-      <mat-cell *matCellDef="let log"> {{log.Level}} </mat-cell>
+      <mat-cell *matCellDef="let log" @item> {{log.Level}} </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Date">
       <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
-      <mat-cell *matCellDef="let log"> {{log.Date | date:"HH:mm dd/MM/yyyy"}} </mat-cell>
+      <mat-cell *matCellDef="let log" @item> {{log.Date | date:"HH:mm dd/MM/yyyy"}} </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Logger">
       <mat-header-cell *matHeaderCellDef> Logger </mat-header-cell>
-      <mat-cell *matCellDef="let log"> {{log.Logger}} </mat-cell>
+      <mat-cell *matCellDef="let log" @item> {{log.Logger}} </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Message">
       <mat-header-cell *matHeaderCellDef> Message </mat-header-cell>
-      <mat-cell *matCellDef="let log"> {{log.Message}} </mat-cell>
+      <mat-cell *matCellDef="let log" @item> {{log.Message}} </mat-cell>
     </ng-container>
     <ng-container matColumnDef="JSON">
       <mat-header-cell *matHeaderCellDef> JSON </mat-header-cell>
-      <mat-cell *matCellDef="let log">
+      <mat-cell *matCellDef="let log" @item>
         <app-object [object]="log.JsonObject"></app-object>
       </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Exception">
       <mat-header-cell *matHeaderCellDef> Exception </mat-header-cell>
-      <mat-cell *matCellDef="let log"> {{log.Exception}} </mat-cell>
+      <mat-cell *matCellDef="let log" @item> {{log.Exception}} </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
